src/objects/Content_Metadata__c.object
<CustomObject>
    <description>Object stores the metadata information about the file, which was uploaded</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures the Account to which the file was linked</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Content Metadata</relationshipLabel>
        <relationshipName>Content_Metadata</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content_Document_Id__c</fullName>
        <description>Stores the ContentDocumentId of the file, which was uploaded</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Content Document Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Content_Size__c</fullName>
        <description>Records the content size of the document</description>
        <label>Size</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Document_Created_By_User__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <label>Document Created By User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person who created the document</description>
        <label>Document Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Content_Metadata</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Created_Date__c</fullName>
        <description>Created date of the document</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <description>This field tracks the document type to classify the documents.</description>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Empf</fullName>
                </value>
                <value>
                    <fullName>VO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Extension__c</fullName>
        <description>Stores the file extension of the file, which was uploaded</description>
        <encryptionScheme>None</encryptionScheme>
        <label>File Extension</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Type__c</fullName>
        <description>Stores the file type, which was uploaded</description>
        <encryptionScheme>None</encryptionScheme>
        <label>File Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Content_Version_Id__c</fullName>
        <description>Latest content version for the document.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Latest Content Version Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_Objects__c</fullName>
        <description>Field displays the Objects a particular document is linked</description>
        <formula>IF(AND (Account__c != NULL, Opportunity__c = NULL, Order__c = NULL), &apos;Account&apos;, 
IF(AND (Account__c != NULL, Opportunity__c != NULL, Order__c = NULL), &apos;Account, Opportunity&apos;, 
IF(AND (Account__c != NULL, Opportunity__c != NULL, Order__c != NULL), &apos;Account, Opportunity, Order&apos;, 
IF(AND (Account__c = NULL, Opportunity__c != NULL, Order__c = NULL), &apos;Opportunity&apos;, 
IF(AND (Account__c = NULL, Opportunity__c != NULL, Order__c != NULL), &apos;Opportunity, Order&apos;,
IF(AND (Account__c = NULL, Opportunity__c = NULL, Order__c != NULL), &apos;Order&apos;, &apos;&apos;
))))))</formula>
        <label>Linked Objects</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Account__c</fullName>
        <description>Account Id tied to Opportunity</description>
        <formula>CASESAFEID(Opportunity__r.AccountId)</formula>
        <label>Opportunity Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity to which the file is associated</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Content Metadata</relationshipLabel>
        <relationshipName>Content_Metadata</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Account__c</fullName>
        <description>Account tied to the Order</description>
        <formula>CASESAFEID(Order__r.AccountId)</formula>
        <label>Order Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order to which the file is associated</description>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Content Metadata</relationshipLabel>
        <relationshipName>Content_Metadata</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owned_By_User__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owned By User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Records the document source</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Document_Source</valueSetName>
        </valueSet>
    </fields>
    <label>Content Metadata</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Document_Type__c</columns>
        <columns>Content_Size__c</columns>
        <columns>Source__c</columns>
        <columns>Owned_By_User__c</columns>
        <columns>Document_Created_By__c</columns>
        <columns>Document_Created_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Order__c</columns>
        <columns>Linked_Objects__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>